[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package"  # Replace with the name of your package
version = "0.1.0"    # Replace with your package version
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
] 
